# FDS

./: .dockerignore  .env.example  .gitignore  123.md  <MagicMock name='Path()' id='129478676300672'>  <MagicMock name='Path()' id='135779919349904'>  <MagicMock name='Path()' id='138938181528576'>  CLAUDE.md  Dockerfile  Dockerfile.web  LLM_don't_read.md  README.md  docker-compose.yml  future_work.md  main.py  pyproject.toml
config/: settings.yaml  skeleton_schema.json
config/examples/: skeleton_sequence_example.json
docs/: ARCHITECTURE.md  CLOUD_SYNC_GUIDE.md  PROJECT_STATUS.md  TESTING_ON_WINDOWS.md  WINDOWS_WEBCAM_TEST.md  api_specification.md  gcloud_wsl_auth_guide.md
docs/plans/: 2025-01-03-yolo11-pose-integration.md  2025-12-28-fall-detection-system-design.md  2025-12-28-fds-phase1-implementation.md  2025-12-29-cloud-sync-design.md  2025-12-29-cloud-sync-implementation.md  2026-01-06-camera-manager-draft.md  (+4 more)
scripts/: __init__.py  cleanup_clips.py  cloud_sync.py  demo_cleanup_scheduler.py  demo_web_dashboard.py  detect_camera.py  diagnose_camera.py  quick_test.ps1  quick_test.sh  run_web.py  save_skeleton_frames.py  test_with_video.py
tests/: test_bbox.py  test_camera.py  test_clip_recorder.py  test_clip_url_generator.py  test_config.py  test_delay_confirm.py  test_delayed_recording.py  test_detector.py  test_event_logger.py  test_main.py  test_notifier.py  test_observer.py  test_pipeline.py  test_pipeline_pose.py  test_pose_rule_engine.py  test_rolling_buffer.py  test_rule_engine.py  test_skeleton.py  test_smoothing.py  test_yolo11_compatibility.py
(+59 files in other folders)
